--- a/rbx_vdg_analysis.ipynb
+++ b/rbx_vdg_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "e58f303b-3b57-459e-8c41-d8dfe7477a1a",
    "metadata": {},
    "outputs": [],
@@ -13,21 +13,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "4ffe0ffb-7549-47f0-bf9b-4b94227d4231",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_15427/531749889.py:5: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  rbx_vdg = pd.read_csv(data_file)\n"
+     ]
+    }
+   ],
    "source": [
-    "date_export = \"2024-05-19\"\n",
+    "date_export = \"2024-07-28\"\n",
     "date_export2 = date_export.replace(\"-\", \"\")\n",
-    "data_file = join(\"results\", f\"rbx_vdg_{date_export}.xlsx\")\n",
+    "data_file = join(\"extractions\", f\"rbx_vdg_{date_export2}.csv.gz\")\n",
     "\n",
-    "rbx_vdg = pd.read_excel(data_file)"
+    "rbx_vdg = pd.read_csv(data_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "415392e3-0280-46ec-9581-12ee845753fc",
    "metadata": {},
    "outputs": [
@@ -55,7 +64,7 @@
        "      <th>record_id</th>\n",
        "      <th>alignement_bnf</th>\n",
        "      <th>rbx_date_creation_notice</th>\n",
-       "      <th>get_rbx_vdg_action</th>\n",
+       "      <th>rbx_vdg_action</th>\n",
        "      <th>rbx_vdg_date</th>\n",
        "      <th>rbx_support</th>\n",
        "      <th>agence_cat</th>\n",
@@ -68,10 +77,10 @@
        "      <td>1</td>\n",
        "      <td>True</td>\n",
        "      <td>2014-06-30</td>\n",
-       "      <td>bib &amp; aut</td>\n",
-       "      <td>20240505.0</td>\n",
-       "      <td>livre</td>\n",
-       "      <td>FR-751131015</td>\n",
+       "      <td>notice bibliographique et autorités</td>\n",
+       "      <td>20240721.0</td>\n",
+       "      <td>Livre</td>\n",
+       "      <td>BnF</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -79,10 +88,10 @@
        "      <td>2</td>\n",
        "      <td>True</td>\n",
        "      <td>2014-06-30</td>\n",
-       "      <td>bib &amp; aut</td>\n",
-       "      <td>20240505.0</td>\n",
-       "      <td>livre</td>\n",
-       "      <td>FR-751131015</td>\n",
+       "      <td>notice bibliographique et autorités</td>\n",
+       "      <td>20240721.0</td>\n",
+       "      <td>Livre</td>\n",
+       "      <td>BnF</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -90,10 +99,10 @@
        "      <td>3</td>\n",
        "      <td>True</td>\n",
        "      <td>2014-06-30</td>\n",
-       "      <td>bib &amp; aut</td>\n",
-       "      <td>20240505.0</td>\n",
-       "      <td>livre</td>\n",
-       "      <td>FR-751131015</td>\n",
+       "      <td>notice bibliographique et autorités</td>\n",
+       "      <td>20240721.0</td>\n",
+       "      <td>Livre</td>\n",
+       "      <td>BnF</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -101,10 +110,10 @@
        "      <td>4</td>\n",
        "      <td>True</td>\n",
        "      <td>2014-06-30</td>\n",
-       "      <td>bib &amp; aut</td>\n",
-       "      <td>20240505.0</td>\n",
-       "      <td>livre</td>\n",
-       "      <td>FR-751131015</td>\n",
+       "      <td>notice bibliographique et autorités</td>\n",
+       "      <td>20240721.0</td>\n",
+       "      <td>Livre</td>\n",
+       "      <td>BnF</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -112,10 +121,10 @@
        "      <td>6</td>\n",
        "      <td>True</td>\n",
        "      <td>2014-06-30</td>\n",
-       "      <td>bib &amp; aut</td>\n",
-       "      <td>20240505.0</td>\n",
-       "      <td>livre</td>\n",
-       "      <td>FR-751131015</td>\n",
+       "      <td>notice bibliographique et autorités</td>\n",
+       "      <td>20240721.0</td>\n",
+       "      <td>Livre</td>\n",
+       "      <td>BnF</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -130,96 +139,109 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>238345</th>\n",
-       "      <td>365635</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2024-05-18</td>\n",
-       "      <td>bib &amp; aut</td>\n",
-       "      <td>20240519.0</td>\n",
-       "      <td>livre</td>\n",
-       "      <td>FR-751131015</td>\n",
+       "      <th>237616</th>\n",
+       "      <td>368068</td>\n",
        "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>238346</th>\n",
-       "      <td>365636</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2024-05-18</td>\n",
-       "      <td>bib &amp; aut</td>\n",
-       "      <td>20240519.0</td>\n",
-       "      <td>livre</td>\n",
-       "      <td>FR-751131015</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>238347</th>\n",
-       "      <td>365637</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2024-05-18</td>\n",
-       "      <td>bib &amp; aut</td>\n",
-       "      <td>20240519.0</td>\n",
-       "      <td>livre</td>\n",
-       "      <td>FR-751131015</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>238348</th>\n",
-       "      <td>365638</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2024-05-18</td>\n",
-       "      <td>bib &amp; aut</td>\n",
-       "      <td>20240519.0</td>\n",
-       "      <td>livre</td>\n",
-       "      <td>FR-751131015</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>238349</th>\n",
-       "      <td>365639</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2024-05-18</td>\n",
-       "      <td>bib &amp; aut</td>\n",
-       "      <td>20240519.0</td>\n",
-       "      <td>livre</td>\n",
+       "      <td>2024-07-27</td>\n",
+       "      <td>notice bibliographique et autorités</td>\n",
+       "      <td>20240728.0</td>\n",
+       "      <td>Livre</td>\n",
        "      <td>Electre</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237617</th>\n",
+       "      <td>368070</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2024-07-27</td>\n",
+       "      <td>notice bibliographique et autorités</td>\n",
+       "      <td>20240728.0</td>\n",
+       "      <td>Livre</td>\n",
+       "      <td>BnF</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237618</th>\n",
+       "      <td>368071</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2024-07-27</td>\n",
+       "      <td>notice bibliographique et autorités</td>\n",
+       "      <td>20240728.0</td>\n",
+       "      <td>Livre</td>\n",
+       "      <td>BnF</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237619</th>\n",
+       "      <td>368072</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2024-07-27</td>\n",
+       "      <td>notice bibliographique et autorités</td>\n",
+       "      <td>20240728.0</td>\n",
+       "      <td>Livre</td>\n",
+       "      <td>BnF</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237620</th>\n",
+       "      <td>368073</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2024-07-27</td>\n",
+       "      <td>notice bibliographique et autorités</td>\n",
+       "      <td>20240728.0</td>\n",
+       "      <td>Livre</td>\n",
+       "      <td>BnF</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>238350 rows × 8 columns</p>\n",
+       "<p>237621 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       record_id  alignement_bnf rbx_date_creation_notice get_rbx_vdg_action  \\\n",
-       "0              1            True               2014-06-30          bib & aut   \n",
-       "1              2            True               2014-06-30          bib & aut   \n",
-       "2              3            True               2014-06-30          bib & aut   \n",
-       "3              4            True               2014-06-30          bib & aut   \n",
-       "4              6            True               2014-06-30          bib & aut   \n",
-       "...          ...             ...                      ...                ...   \n",
-       "238345    365635            True               2024-05-18          bib & aut   \n",
-       "238346    365636            True               2024-05-18          bib & aut   \n",
-       "238347    365637            True               2024-05-18          bib & aut   \n",
-       "238348    365638            True               2024-05-18          bib & aut   \n",
-       "238349    365639           False               2024-05-18          bib & aut   \n",
+       "       record_id  alignement_bnf rbx_date_creation_notice  \\\n",
+       "0              1            True               2014-06-30   \n",
+       "1              2            True               2014-06-30   \n",
+       "2              3            True               2014-06-30   \n",
+       "3              4            True               2014-06-30   \n",
+       "4              6            True               2014-06-30   \n",
+       "...          ...             ...                      ...   \n",
+       "237616    368068           False               2024-07-27   \n",
+       "237617    368070            True               2024-07-27   \n",
+       "237618    368071            True               2024-07-27   \n",
+       "237619    368072            True               2024-07-27   \n",
+       "237620    368073            True               2024-07-27   \n",
        "\n",
-       "        rbx_vdg_date rbx_support    agence_cat    pat  \n",
-       "0         20240505.0       livre  FR-751131015  False  \n",
-       "1         20240505.0       livre  FR-751131015  False  \n",
-       "2         20240505.0       livre  FR-751131015  False  \n",
-       "3         20240505.0       livre  FR-751131015  False  \n",
-       "4         20240505.0       livre  FR-751131015  False  \n",
-       "...              ...         ...           ...    ...  \n",
-       "238345    20240519.0       livre  FR-751131015  False  \n",
-       "238346    20240519.0       livre  FR-751131015  False  \n",
-       "238347    20240519.0       livre  FR-751131015  False  \n",
-       "238348    20240519.0       livre  FR-751131015  False  \n",
-       "238349    20240519.0       livre       Electre  False  \n",
+       "                             rbx_vdg_action  rbx_vdg_date rbx_support  \\\n",
+       "0       notice bibliographique et autorités    20240721.0       Livre   \n",
+       "1       notice bibliographique et autorités    20240721.0       Livre   \n",
+       "2       notice bibliographique et autorités    20240721.0       Livre   \n",
+       "3       notice bibliographique et autorités    20240721.0       Livre   \n",
+       "4       notice bibliographique et autorités    20240721.0       Livre   \n",
+       "...                                     ...           ...         ...   \n",
+       "237616  notice bibliographique et autorités    20240728.0       Livre   \n",
+       "237617  notice bibliographique et autorités    20240728.0       Livre   \n",
+       "237618  notice bibliographique et autorités    20240728.0       Livre   \n",
+       "237619  notice bibliographique et autorités    20240728.0       Livre   \n",
+       "237620  notice bibliographique et autorités    20240728.0       Livre   \n",
        "\n",
-       "[238350 rows x 8 columns]"
+       "       agence_cat    pat  \n",
+       "0             BnF  False  \n",
+       "1             BnF  False  \n",
+       "2             BnF  False  \n",
+       "3             BnF  False  \n",
+       "4             BnF  False  \n",
+       "...           ...    ...  \n",
+       "237616    Electre  False  \n",
+       "237617        BnF  False  \n",
+       "237618        BnF  False  \n",
+       "237619        BnF  False  \n",
+       "237620        BnF  False  \n",
+       "\n",
+       "[237621 rows x 8 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "0cfe044f-f2fb-48fd-a053-76064d1b7bc7",
    "metadata": {},
    "outputs": [
@@ -238,12 +260,12 @@
      "data": {
       "text/plain": [
        "alignement_bnf\n",
-       "False    114770\n",
-       "True     123580\n",
+       "False    109791\n",
+       "True     127830\n",
        "Name: record_id, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,41 +276,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "e752f076-df38-45df-9490-e4f087a4d0a7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "agence_cat\n",
-       "595126101                             95561\n",
-       "595126101 ; Médiathèque de Roubaix      135\n",
-       "ADAV                                   2704\n",
-       "BNF                                       4\n",
-       "BTLF                                    358\n",
-       "                                      ...  \n",
-       "OCoLC ; UKMGB                             1\n",
-       "OCoLC ; UQ1                               1\n",
-       "OCoLC ; ZWZ                              57\n",
-       "UNKNOWN                                 243\n",
-       "cdmail                                 1507\n",
-       "Name: record_id, Length: 67, dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rbx_vdg.groupby('agence_cat')['record_id'].count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "2f902cfa-eb21-4dc4-a844-96417a72fe17",
    "metadata": {},
    "outputs": [
     {
@@ -312,88 +301,74 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>record_id</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>agence_cat</th>\n",
-       "      <th></th>\n",
+       "      <th>record_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>FR-751131015</th>\n",
-       "      <td>112731</td>\n",
+       "      <th>1</th>\n",
+       "      <td>BnF</td>\n",
+       "      <td>116894</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>595126101</th>\n",
-       "      <td>95561</td>\n",
+       "      <th>6</th>\n",
+       "      <td>Médiathèque de Roubaix</td>\n",
+       "      <td>95408</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Electre</th>\n",
-       "      <td>13961</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Electre</td>\n",
+       "      <td>9091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>COLACO</th>\n",
-       "      <td>4336</td>\n",
+       "      <th>3</th>\n",
+       "      <td>COLACO</td>\n",
+       "      <td>4469</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>GAM</th>\n",
-       "      <td>3517</td>\n",
+       "      <th>2</th>\n",
+       "      <td>CDMAIL</td>\n",
+       "      <td>4394</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>GAM</td>\n",
+       "      <td>3600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>OCoLC ; GWDNB</th>\n",
-       "      <td>1</td>\n",
+       "      <th>0</th>\n",
+       "      <td>ADAV</td>\n",
+       "      <td>2691</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>OCoLC ; ICU/DLC</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OCoLC ; LVB</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OCoLC ; MUQ</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Dynix</th>\n",
-       "      <td>1</td>\n",
+       "      <th>7</th>\n",
+       "      <td>autre</td>\n",
+       "      <td>1029</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>67 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 record_id\n",
-       "agence_cat                \n",
-       "FR-751131015        112731\n",
-       "595126101            95561\n",
-       "Electre              13961\n",
-       "COLACO                4336\n",
-       "GAM                   3517\n",
-       "...                    ...\n",
-       "OCoLC ; GWDNB            1\n",
-       "OCoLC ; ICU/DLC          1\n",
-       "OCoLC ; LVB              1\n",
-       "OCoLC ; MUQ              1\n",
-       "Dynix                    1\n",
-       "\n",
-       "[67 rows x 1 columns]"
+       "               agence_cat  record_id\n",
+       "1                     BnF     116894\n",
+       "6  Médiathèque de Roubaix      95408\n",
+       "4                 Electre       9091\n",
+       "3                  COLACO       4469\n",
+       "2                  CDMAIL       4394\n",
+       "5                     GAM       3600\n",
+       "0                    ADAV       2691\n",
+       "7                   autre       1029"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.pivot_table(rbx_vdg, values='record_id', index='agence_cat', aggfunc='count').sort_values(by='record_id', ascending=False)"
+    "rbx_vdg.groupby('agence_cat')['record_id'].count().reset_index().sort_values(by='record_id', ascending=False)"
    ]
   },
   {
@@ -421,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
