--- a/rbx_vdg_analysis.ipynb
+++ b/rbx_vdg_analysis.ipynb
@@ -252,31 +252,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "0cfe044f-f2fb-48fd-a053-76064d1b7bc7",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alignement_bnf</th>\n",
+       "      <th>nb_notices</th>\n",
+       "      <th>part</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>109791</td>\n",
+       "      <td>0.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>127830</td>\n",
+       "      <td>0.54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "alignement_bnf\n",
-       "False    109791\n",
-       "True     127830\n",
-       "Name: record_id, dtype: int64"
+       "   alignement_bnf  nb_notices  part\n",
+       "0           False      109791  0.46\n",
+       "1            True      127830  0.54"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rbx_vdg.groupby('alignement_bnf')['record_id'].count()"
+    "rbx_vdg_alignement_bnf = rbx_vdg.groupby('alignement_bnf')['record_id'].count().reset_index()\n",
+    "rbx_vdg_alignement_bnf.columns = ['alignement_bnf', 'nb_notices']\n",
+    "rbx_vdg_alignement_bnf['part'] = round(rbx_vdg_alignement_bnf['nb_notices'] / rbx_vdg_alignement_bnf['nb_notices'].sum(), 2)\n",
+    "rbx_vdg_alignement_bnf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "e752f076-df38-45df-9490-e4f087a4d0a7",
    "metadata": {},
    "outputs": [
@@ -302,7 +345,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>agence_cat</th>\n",
-       "      <th>record_id</th>\n",
+       "      <th>nb_notices</th>\n",
+       "      <th>part</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -310,65 +354,76 @@
        "      <th>1</th>\n",
        "      <td>BnF</td>\n",
        "      <td>116894</td>\n",
+       "      <td>0.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Médiathèque de Roubaix</td>\n",
        "      <td>95408</td>\n",
+       "      <td>0.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Electre</td>\n",
        "      <td>9091</td>\n",
+       "      <td>0.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>COLACO</td>\n",
        "      <td>4469</td>\n",
+       "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>CDMAIL</td>\n",
        "      <td>4394</td>\n",
+       "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>GAM</td>\n",
        "      <td>3600</td>\n",
+       "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ADAV</td>\n",
        "      <td>2691</td>\n",
+       "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>autre</td>\n",
        "      <td>1029</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               agence_cat  record_id\n",
-       "1                     BnF     116894\n",
-       "6  Médiathèque de Roubaix      95408\n",
-       "4                 Electre       9091\n",
-       "3                  COLACO       4469\n",
-       "2                  CDMAIL       4394\n",
-       "5                     GAM       3600\n",
-       "0                    ADAV       2691\n",
-       "7                   autre       1029"
+       "               agence_cat  nb_notices  part\n",
+       "1                     BnF      116894  0.49\n",
+       "6  Médiathèque de Roubaix       95408  0.40\n",
+       "4                 Electre        9091  0.04\n",
+       "3                  COLACO        4469  0.02\n",
+       "2                  CDMAIL        4394  0.02\n",
+       "5                     GAM        3600  0.02\n",
+       "0                    ADAV        2691  0.01\n",
+       "7                   autre        1029  0.00"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rbx_vdg.groupby('agence_cat')['record_id'].count().reset_index().sort_values(by='record_id', ascending=False)"
+    "rbx_vdg_agence_cat = rbx_vdg.groupby('agence_cat')['record_id'].count().reset_index().sort_values(by='record_id', ascending=False)\n",
+    "rbx_vdg_agence_cat.columns = ['agence_cat', 'nb_notices']\n",
+    "rbx_vdg_agence_cat['part'] = round(rbx_vdg_agence_cat['nb_notices'] / rbx_vdg_agence_cat['nb_notices'].sum(), 2)\n",
+    "rbx_vdg_agence_cat"
    ]
   },
   {
