--- a/utils/referentiels/creation_fichier_referentiel.ipynb
+++ b/utils/referentiels/creation_fichier_referentiel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "c3ef67b1-e8e1-4c87-a600-6ac6e96261e2",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "420a72c1-3856-4620-92d7-2ac141a8b8c5",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "1428a538-719d-45ed-855f-5487a21240b0",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "852cf732-8154-43ae-b7c5-74a9dfa2d09e",
    "metadata": {},
    "outputs": [],
@@ -56,17 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "766853fd-8e3e-46b1-bc0f-62bd7ae2036e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "referentiels.to_csv(\"../referentiels.csv\", index=False)"
+    "referentiels.to_csv(\"referentiels.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "80eb7eab-e5a8-4025-96d0-1a20fb48cb5d",
    "metadata": {},
    "outputs": [
@@ -83,22 +83,23 @@
        "koha_av_183a                           109\n",
        "koha_av_loc                             31\n",
        "koha_av_unimarc_182c                    24\n",
-       "koha_av_unimarc_181c                    24\n",
        "koha_av_181c                            24\n",
+       "koha_av_unimarc_181c                    24\n",
        "koha_av_typedoc                         19\n",
        "koha_av_bus                             17\n",
-       "type_notice_codes                       13\n",
        "koha_av_acq_attr2                       13\n",
+       "bib_type_notice_codes                   13\n",
        "koha_av_report_group                    12\n",
+       "auth_type_entite                        12\n",
        "koha_av_181a                            11\n",
        "koha_av_sip_media_type                  11\n",
        "koha_av_class_romans                    11\n",
-       "koha_av_182a                            10\n",
+       "koha_av_pcs                             10\n",
        "koha_av_suggest_format                  10\n",
        "koha_av_suggest                         10\n",
        "koha_av_unimarc_182a                    10\n",
        "koha_av_report_subgroup                 10\n",
-       "koha_av_pcs                             10\n",
+       "koha_av_182a                            10\n",
        "koha_av_182c                             9\n",
        "koha_av_collect                          8\n",
        "koha_av_etat                             8\n",
@@ -106,32 +107,32 @@
        "koha_av_roadtype                         7\n",
        "koha_av_146a                             7\n",
        "koha_av_payment_type                     6\n",
-       "niveau_bib_codes                         5\n",
+       "bib_niveau_codes                         5\n",
        "koha_av_alignement_bnf                   5\n",
        "koha_av_retirecoll                       4\n",
        "koha_av_order_cancellation_reason        3\n",
-       "koha_av_lost                             3\n",
        "koha_av_aut_lien                         3\n",
-       "koha_av_acq_attr                         3\n",
-       "koha_av_restriction                      3\n",
-       "koha_av_damaged                          3\n",
+       "koha_av_lost                             3\n",
        "koha_av_action                           3\n",
+       "koha_av_damaged                          3\n",
+       "koha_av_restriction                      3\n",
+       "koha_av_acq_attr                         3\n",
        "koha_av_v091a                            3\n",
        "koha_av_ar_cancellation                  3\n",
-       "koha_av_unimarc_systemes_indexation      2\n",
        "koha_av_v091c                            2\n",
-       "koha_av_publicc                          2\n",
+       "koha_av_unimarc_systemes_indexation      2\n",
+       "koha_av_yes_no                           2\n",
        "koha_av_return_claim_resolution          2\n",
-       "koha_av_325h                             2\n",
+       "koha_av_publicc                          2\n",
        "koha_av_dons                             2\n",
        "koha_av_cand                             2\n",
-       "koha_av_yes_no                           2\n",
-       "koha_av_hsbnd_freq                       1\n",
+       "koha_av_325h                             2\n",
        "koha_av_bor_notes                        1\n",
+       "koha_av_hsbnd_freq                       1\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,6 +140,14 @@
    "source": [
     "referentiels['referentiel'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9254c12-3a86-4234-beef-5ef97a7c0e4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -157,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
